# ros_openni2_wrapper

./: CMakeLists.txt  package.xml
src/: display_scene.cpp  dual_kinect.cpp  my_subscriber.cpp  openni_opencv_3.cpp
